--- a/Drinks2u_v1/app/src/main/res/layout/activity_pagos.xml
+++ b/Drinks2u_v1/app/src/main/res/layout/activity_pagos.xml
@@ -12,7 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <LinearLayout
+        <!--<LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical" >
@@ -57,6 +57,6 @@
 
                 </LinearLayout>
             </android.support.v7.widget.CardView>
-        </LinearLayout>
+        </LinearLayout>-->
     </ScrollView>
 </LinearLayout>
