--- a/Drinks2u_v1/app/src/main/res/layout/content_main.xml
+++ b/Drinks2u_v1/app/src/main/res/layout/content_main.xml
@@ -14,58 +14,65 @@
         android:layout_height="match_parent">
 
         <LinearLayout
+            android:id="@+id/principal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <ImageView
+            <!--<ImageView
                 android:id="@+id/imageView3"
                 android:layout_width="match_parent"
                 android:layout_height="200dp"
                 android:scaleType="centerCrop"
                 app:srcCompat="@drawable/banner" />
+
             <Button
                 android:id="@+id/button1"
                 android:layout_width="120dp"
                 android:layout_height="50dp"
-                android:text="@string/boton_pago"
+                android:layout_gravity="center"
                 android:layout_marginTop="12dp"
-                android:layout_gravity="center"/>
+                android:text="@string/boton_pago" />
+
             <Button
                 android:id="@+id/button2"
                 android:layout_width="120dp"
                 android:layout_height="50dp"
-                android:text="@string/boton_pedido"
+                android:layout_gravity="center"
                 android:layout_marginTop="12dp"
-                android:layout_gravity="center"/>
+                android:text="@string/boton_pedido" />
+
             <Button
                 android:id="@+id/button3"
                 android:layout_width="150dp"
                 android:layout_height="50dp"
-                android:text="@string/boton_noti"
+                android:layout_gravity="center"
                 android:layout_marginTop="12dp"
-                android:layout_gravity="center"/>
+                android:text="@string/boton_noti" />
+
             <Button
                 android:id="@+id/button4"
                 android:layout_width="120dp"
                 android:layout_height="50dp"
-                android:text="@string/boton_cuenta"
+                android:layout_gravity="center"
                 android:layout_marginTop="12dp"
-                android:layout_gravity="center"/>
+                android:text="@string/boton_cuenta" />
+
             <Button
                 android:id="@+id/button5"
                 android:layout_width="160dp"
                 android:layout_height="50dp"
-                android:text="@string/boton_config"
+                android:layout_gravity="center"
                 android:layout_marginTop="12dp"
-                android:layout_gravity="center"/>
+                android:text="@string/boton_config" />
+
             <Button
                 android:id="@+id/button6"
                 android:layout_width="120dp"
                 android:layout_height="50dp"
-                android:text="@string/boton_report"
+                android:layout_gravity="center"
                 android:layout_marginTop="12dp"
-                android:layout_gravity="center"/>
+                android:text="@string/boton_report" />-->
         </LinearLayout>
     </ScrollView>
 
