--- a/Drinks2u_v1/app/src/main/res/layout/fragment_frag_pagos.xml
+++ b/Drinks2u_v1/app/src/main/res/layout/fragment_frag_pagos.xml
@@ -1,15 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:layout_editor_absoluteY="81dp">
+    tools:context=".FragPagos"
+    android:orientation="vertical">
 
+    <!-- TODO: Update blank fragment layout -->
     <ScrollView
-        android:layout_width="381dp"
-        android:layout_height="526dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         tools:layout_editor_absoluteX="0dp"
         tools:layout_editor_absoluteY="-2dp"
         tools:ignore="MissingConstraints">
@@ -18,6 +20,16 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical" >
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Pagos Recientes"
+                android:layout_gravity="center"
+                android:textStyle="bold"
+                android:textSize="20sp"
+                android:paddingBottom="3dp"
+                android:paddingTop="3dp"/>
 
             <android.support.v7.widget.CardView
                 xmlns:card_view="http://schemas.android.com/apk/res-auto"
@@ -40,13 +52,13 @@
                         android:layout_marginStart="16dp"
                         android:layout_marginTop="8dp"
                         app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintEnd_toStartOf="@+id/group_txt"
+                        app:layout_constraintEnd_toStartOf="@+id/txt1-1"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
                         android:src="@drawable/tecateoriginal"/>
 
                     <TextView
-                        android:id="@+id/group_txt"
+                        android:id="@+id/txt1-1"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="8dp"
@@ -54,13 +66,13 @@
                         android:layout_marginTop="8dp"
                         android:text="Tecate Original"
                         android:textStyle="bold"
-                        app:layout_constraintBottom_toTopOf="@+id/group_txt1"
+                        app:layout_constraintBottom_toTopOf="@+id/txt1-2"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toEndOf="@+id/row_img"
                         app:layout_constraintTop_toTopOf="parent"/>
 
                     <TextView
-                        android:id="@+id/group_txt1"
+                        android:id="@+id/txt1-2"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_marginEnd="8dp"
@@ -72,7 +84,7 @@
                         app:layout_constraintTop_toTopOf="parent" />
 
                     <TextView
-                        android:id="@+id/group_txt2"
+                        android:id="@+id/txt1-3"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_marginEnd="8dp"
@@ -82,10 +94,10 @@
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toEndOf="@+id/row_img"
-                        app:layout_constraintTop_toTopOf="@+id/group_txt1" />
+                        app:layout_constraintTop_toTopOf="@+id/txt1-2" />
 
                     <TextView
-                        android:id="@+id/group_txt3"
+                        android:id="@+id/txt1-4"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_marginEnd="8dp"
@@ -102,7 +114,6 @@
                 </android.support.constraint.ConstraintLayout>
 
             </android.support.v7.widget.CardView>
-
             <android.support.v7.widget.CardView
                 xmlns:card_view="http://schemas.android.com/apk/res-auto"
                 android:id="@+id/card_view2"
@@ -124,52 +135,52 @@
                         android:layout_marginStart="16dp"
                         android:layout_marginTop="8dp"
                         app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintEnd_toStartOf="@+id/group_tx"
+                        app:layout_constraintEnd_toStartOf="@+id/txt2-1"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
                         android:src="@drawable/victoria"/>
 
                     <TextView
-                        android:id="@+id/group_tx"
+                        android:id="@+id/txt2-1"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="8dp"
                         android:layout_marginEnd="8dp"
                         android:layout_marginTop="8dp"
-                        android:text="Tecate Original"
+                        android:text="Victoria"
                         android:textStyle="bold"
-                        app:layout_constraintBottom_toTopOf="@+id/group_tx1"
+                        app:layout_constraintBottom_toTopOf="@+id/txt2-2"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toEndOf="@+id/row_img2"
                         app:layout_constraintTop_toTopOf="parent"/>
 
                     <TextView
-                        android:id="@+id/group_tx1"
+                        android:id="@+id/txt2-2"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_marginEnd="8dp"
                         android:layout_marginStart="8dp"
-                        android:text="Precio: $20"
+                        android:text="Precio: $120"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toEndOf="@+id/row_img2"
                         app:layout_constraintTop_toTopOf="parent" />
 
                     <TextView
-                        android:id="@+id/group_tx2"
+                        android:id="@+id/txt2-3"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_marginEnd="8dp"
                         android:layout_marginStart="8dp"
                         android:layout_marginTop="8dp"
-                        android:text="Unidades: 4"
+                        android:text="Unidades: 1"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toEndOf="@+id/row_img2"
-                        app:layout_constraintTop_toTopOf="@+id/group_tx1" />
+                        app:layout_constraintTop_toTopOf="@+id/txt2-2" />
 
                     <TextView
-                        android:id="@+id/group_tx3"
+                        android:id="@+id/txt2-4"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_marginEnd="8dp"
@@ -185,7 +196,90 @@
 
                 </android.support.constraint.ConstraintLayout>
             </android.support.v7.widget.CardView>
+            <android.support.v7.widget.CardView
+                xmlns:card_view="http://schemas.android.com/apk/res-auto"
+                android:id="@+id/card_view3"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                card_view:cardCornerRadius="4dp" >
+
+                <android.support.constraint.ConstraintLayout
+                    android:layout_height="match_parent"
+                    android:layout_width="match_parent">
+
+                    <ImageView
+                        android:id="@+id/row_img3"
+                        android:layout_width="80dp"
+                        android:layout_height="0dp"
+                        android:layout_marginBottom="8dp"
+                        android:layout_marginEnd="8dp"
+                        android:layout_marginStart="16dp"
+                        android:layout_marginTop="8dp"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toStartOf="@+id/txt3-1"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        android:src="@drawable/absolut"/>
+
+                    <TextView
+                        android:id="@+id/txt3-1"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="8dp"
+                        android:layout_marginEnd="8dp"
+                        android:layout_marginTop="8dp"
+                        android:text="Vodka Absolut"
+                        android:textStyle="bold"
+                        app:layout_constraintBottom_toTopOf="@+id/txt3-2"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toEndOf="@+id/row_img3"
+                        app:layout_constraintTop_toTopOf="parent"/>
+
+                    <TextView
+                        android:id="@+id/txt3-2"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginEnd="8dp"
+                        android:layout_marginStart="8dp"
+                        android:text="Precio: $200"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toEndOf="@+id/row_img3"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+                    <TextView
+                        android:id="@+id/txt3-3"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginEnd="8dp"
+                        android:layout_marginStart="8dp"
+                        android:layout_marginTop="8dp"
+                        android:text="Unidades: 2"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toEndOf="@+id/row_img3"
+                        app:layout_constraintTop_toTopOf="@+id/txt3-2" />
+
+                    <TextView
+                        android:id="@+id/txt3-4"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginEnd="8dp"
+                        android:layout_marginStart="8dp"
+                        android:layout_marginTop="8dp"
+                        android:text="Ver Detalles"
+                        android:textStyle="italic"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toEndOf="@+id/row_img3"
+                        app:layout_constraintTop_toTopOf="parent"
+                        android:gravity="end"/>
+
+                </android.support.constraint.ConstraintLayout>
+            </android.support.v7.widget.CardView>
         </LinearLayout>
+
     </ScrollView>
 
-</android.support.constraint.ConstraintLayout>
+</FrameLayout>
