--- a/Drinks2u_v1/app/src/main/res/layout/fragment_frag_home.xml
+++ b/Drinks2u_v1/app/src/main/res/layout/fragment_frag_home.xml
@@ -18,6 +18,20 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
+        <!--<RelativeLayout
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent">
+            <LinearLayout
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
+                android:gravity="center">
+                <ImageSwitcher
+                    android:id="@+id/slide"
+                    android:layout_width="match_parent"
+                    android:layout_height="200dp">
+                </ImageSwitcher>
+            </LinearLayout>
+        </RelativeLayout>-->
 
             <ImageView
                 android:id="@+id/imageView3"
@@ -67,15 +81,28 @@
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content">
-                        <Button
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="@string/action_view"/>
 
                         <Button
+                            android:id="@+id/btn1"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="@string/action_carrito"/>
+                            android:text="@string/action_view"
+                            android:background="?android:attr/selectableItemBackground"
+                            android:paddingLeft="6dp"
+                            android:paddingRight="3dp"
+                            android:drawableLeft="@drawable/ic_action_eye"
+                            android:drawablePadding="8dp"/>
+
+                        <Button
+                            android:id="@+id/btn2"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="@string/action_carrito"
+                            android:background="?android:attr/selectableItemBackground"
+                            android:paddingLeft="10dp"
+                            android:paddingRight="4dp"
+                            android:drawableLeft="@drawable/ic_action_shop"
+                            android:drawablePadding="8dp"/>
                     </LinearLayout>
                 </LinearLayout>
 
@@ -127,12 +154,22 @@
                             <Button
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:text="@string/action_view"/>
+                                android:text="@string/action_view"
+                                android:background="?android:attr/selectableItemBackground"
+                                android:paddingLeft="6dp"
+                                android:paddingRight="3dp"
+                                android:drawableLeft="@drawable/ic_action_eye"
+                                android:drawablePadding="8dp"/>
 
                             <Button
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:text="@string/action_carrito"/>
+                                android:text="@string/action_carrito"
+                                android:background="?android:attr/selectableItemBackground"
+                                android:paddingLeft="10dp"
+                                android:paddingRight="4dp"
+                                android:drawableLeft="@drawable/ic_action_shop"
+                                android:drawablePadding="8dp" />
                         </LinearLayout>
                     </LinearLayout>
 
