Comentarios de Uso
Se agregaron comentarios de como se usan los fragmentos agreados en la app para la presentacion del dia jueves.

--- a/Drinks2u_v1/app/src/main/res/layout/content_main.xml
+++ b/Drinks2u_v1/app/src/main/res/layout/content_main.xml
@@ -19,6 +19,11 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
+            <!--Esta sección de la barra lateral siempre de permanecer en blanco
+            pues si este es modificado con la inclusión de algun boton o texto
+            este al momento de cambiar el fragmento se vera junto con su contenido
+            -->
+
             <!--<ImageView
                 android:id="@+id/imageView3"
                 android:layout_width="match_parent"
