--- a/Drinks2u_v1/app/src/main/res/layout/fragment_frag_reporte.xml
+++ b/Drinks2u_v1/app/src/main/res/layout/fragment_frag_reporte.xml
@@ -5,7 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".FragReporte"
+    tools:context=".fragments.FragReporte"
     android:orientation="vertical">
 
     <!-- TODO: Update blank fragment layout -->
@@ -29,10 +29,10 @@
                 android:layout_gravity="center"
                 card_view:cardCornerRadius="4dp">
                 <RelativeLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="160dp">
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
                     <ImageView
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:src="@drawable/fondo"
                         android:scaleType="centerCrop"/>
